--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
    
-    <img class="ginastica-artistica.png" src="">
+    <img class="ginastica-artistica.png " src="">
     <ul class="lista_cabecalho">
         <li class="item_lista_cabecalho"><a href="index.html">home</a></li>
-        <li class="item_lista_cabecalho">volei</li>
-        <li class="item_lista_cabecalho">Taekwondo></li>
+        <li class="item_lista_cabecalho">ginstica ritimica</li>
+        <li class="item_lista_cabecalho">ginastica acrobatica></li>
     <h1>esportes de alto rendimento</h1>
     <p>o esporte não constroi caráter, ele o revela.</p>
     <img src="beatriz-dias.webp" alt=""> 
