--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   
+   <header>
     <img class="ginastica-artistica.png " src="">
     <ul class="lista_cabecalho">
         <li class="item_lista_cabecalho"><a href="index.html">home</a></li>
-        <li class="item_lista_cabecalho">ginstica ritimica</li>
-        <li class="item_lista_cabecalho">ginastica acrobatica></li>
+        <li class="item_lista_cabecalho"><a href="ginastica.html ">ginastica ritimica</a></li>
+        <li class="item_lista_cabecalho"><a href="atleta.html">vire atleta</a></li>
+    </header>
+
     <h1>esportes de alto rendimento</h1>
     <p>o esporte não constroi caráter, ele o revela.</p>
     <img src="beatriz-dias.webp" alt=""> 
