--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="port-br">
-<head> 
-    <header class="cabecalho">
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>esportes e atividades físicas</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <header>
-    <img class="ginastica-artistica.png " src="">
+    <header class="cabecalho">
     <ul class="lista_cabecalho">
         <li class="item_lista_cabecalho"><a href="index.html">home</a></li>
-        <li class="item_lista_cabecalho"><a href="ginastica.html ">ginastica ritimica</a></li>
+        <li class="item_lista_cabecalho"><a href="ginastica.html">ginastica ritimica</a></li>
         <li class="item_lista_cabecalho"><a href="atleta.html">vire atleta</a></li>
+    </ul>
     </header>
 
     <h1>esportes de alto rendimento</h1>
@@ -23,5 +23,3 @@
      <img src="Flavia-Saraiva.webp" alt="">
 </body>
 </html>
-
-<img src="" alt="">
