--- a/ginastica.html
+++ b/ginastica.html
@@ -20,4 +20,5 @@
     <img src= "ritimica.web" alt="">
     <img src="tchuqui.web" alt="">
 
-    Olímpica desde 1984, 
+    Direcionada ao público feminino, a Ginástica Rítimica é um esporte olímpico em que as ginastas fazem suas apresentaçoẽs em um tablado com tapete e 13x13 m e utilizam
+    aparelhos oficiais como: cordas, arcos, bolas, maças, e fitas, acompanhados por música. O esporte pode ser apresentado em grupos ou individualmente.
