--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
     </ul>
     </header>
 
-    <h1>esportes de alto rendimento</h1>
+    <h1>esportes de alto rendimento. ginásticas</h1>
     <p>o esporte não constroi caráter, ele o revela.</p>
     <img src="beatriz-dias.webp" alt=""> 
     <img src="download.jpeg" alt="">
-     <img src="Flavia-Saraiva.webp" alt="">
 </body>
 </html>
